force-app/main/default/objects/Grupo_Agentes__c/Grupo_Agentes__c.object-meta.xml
<CustomObject>
    <description>Se utilizan para agregar los usuarios a las asignaciones de oportunidades</description>
    <label>Grupos Agentes</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Nombre de Grupos Agentes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos Agentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>