force-app/main/default/objects/Grupo_Agentes__c/fields/Activo_para_Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Activo_para_Oportunidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo para Oportunidades</label>
    <type>Checkbox</type>
</CustomField>