force-app/main/default/objects/Grupo_Agentes__c/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grupos_Agentes</relationshipName>
    <type>Lookup</type>
</CustomField>