force-app/main/default/objects/Grupo_Agentes__c/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <referenceTo>Grupo_Oportunidades__c</referenceTo>
    <relationshipLabel>Grupos Agentes</relationshipLabel>
    <relationshipName>Grupos_Agentes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>